<resources>
    <string name="app_name" translatable="false">OTCHelper</string>
    <string name="price_is_lower_than_half_of_annual_average">Price is lower than half of an. avg.</string>
    <string name="stocks">Stocks</string>
    <string name="watchlist">Watchlist</string>
    <string name="added_to_watchlist">Added to watchlist</string>
    <string name="removed_from_watchlist">Removed from watchlist</string>
    <string name="remove">Remove</string>
    <string name="prev_close">Close</string>
    <string name="opening">Open</string>
    <string name="when_saved">When saved</string>
    <string name="last_sale">Last</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="invalid_data">Invalid data</string>
    <string name="description_markets">By default the filter is searching on OTCQB, OTCQX and Pink Current. By activating this checkbox you can include also Pink Limited and Pink No Information</string>
    <string name="include_all_pink_markets">Include all Pink markets</string>
    <string name="no_shares_info_descr">By default companies which not give any info about shares volume are skipped. By unactivating this checkbox you can turn off this skipping</string>
    <string name="skip_shares_number_filter">Skip shares number filter</string>
    <string name="markets">Markets</string>
    <string name="price">Price</string>
    <string name="volume">Volume</string>
    <string name="float_dtc_shares">Float/dtc shares</string>
    <string name="shares_number">Shares number</string>
    <string name="saved">Successfully saved</string>
    <string name="settings">Settings</string>
    <string name="stocks_filter">Stocks filter</string>
    <string name="started_fetching">Started fetching</string>
    <string name="price_changed">Price of several stocks from your watchlist changed since you last saw them. You may would like to take a look</string>
    <string name="fetched_stocks">Fetched %s stocks, %s new</string>
    <string name="auth_out">Out/Auth</string>
    <string name="from_prev_max">%.2f%s from prev max</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="industry">Industry</string>
    <string name="outstanding">Outstanding Shares</string>
    <string name="authorised">Authorised Shares</string>
    <string name="float_shares">Float</string>
    <string name="dtc">Held at DTC</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="number_of_employees">Number Of Employees</string>
    <string name="website">Website</string>
    <string name="email">Email</string>
    <string name="profile">Profile</string>
    <string name="security">Security</string>
    <string name="market_cap">Market Cap</string>
    <string name="unrestricted">Unrestricted</string>
    <string name="restricted">Restricted</string>
    <string name="parvalue">ParValue</string>
    <string name="news">News</string>
    <string name="otc">OTC</string>
    <string name="external">External</string>
    <string name="sec">SEC</string>
    <string name="disclosure">Disclosure</string>
    <string name="reports">Reports</string>
    <string name="stocktwits">Stocktwits</string>
    <string name="reddit">Reddit</string>
    <string name="twitter">Twitter</string>
    <string name="links">Links</string>
    <string name="start_typing_here">Start typing here...</string>
    <string name="search">Search</string>
    <string name="sound_of_notifications">Sound of Notifications</string>
    <string name="possible_current">!Possible Current!</string>
    <string name="not_compliant">Not compliant to shares structure filter</string>
    <string name="could_not_load_chart">Could not load chart</string>
    <string name="support_resistance">Support/Resistance</string>
    <string name="levels">Levels</string>
    <string name="price_ascending">Price ascending</string>
    <string name="price_descending">Price descending</string>
    <string name="market_ascending">Market ascending</string>
    <string name="market_descending">Market descending</string>
    <string name="volume_ascending">Volume ascending</string>
    <string name="volume_descending">Volume descending</string>
    <string name="sort_by">Sort By</string>
    <string name="select_all">Select All</string>
    <string name="select_industries">Select Industries</string>
    <string name="unselect_all">Unselect All</string>
    <string name="industries">Industries</string>
    <string name="select_markets">Select Markets</string>
</resources>