<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:cardCornerRadius="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:id="@+id/ivAlarm"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/ic_alarm"
                visibleIfOrGone="@{item.isPriceChanged}"
                app:tint="?colorPrimary"
                tools:visibility="gone"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:orientation="horizontal"
                android:id="@+id/valuesContainer"
                app:layout_constraintTop_toBottomOf="@id/barrier">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/prev_close" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        doubleValue="@{item.previousClose}"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/opening" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        doubleValue="@{item.openingPrice}"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/when_saved" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        doubleValue="@{item.priceFirst}"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/last_sale" />

                    <TextView
                        isActualMoreThanFirst="@{item}"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        doubleValue="@{item.lastSale}"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/tvIndustry"
                android:layout_width="0dp"
                visibleIfOrGone="@{item.industry != null}"
                android:layout_height="wrap_content"
                android:layout_marginVertical="1dp"
                app:layout_constraintEnd_toStartOf="@id/ivAlarm"
                android:text="@{item.industry}"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSymbol" />

            <TextView
                android:id="@+id/tvIsPriceGood"
                android:layout_width="0dp"
                visibleIfOrGone="@{item.fromLastMax != null}"
                android:layout_height="wrap_content"
                android:layout_marginVertical="1dp"
                app:layout_constraintEnd_toStartOf="@id/ivAlarm"
                lastMax="@{item.fromLastMax}"
                android:textSize="14sp"
                android:textColor="?attr/colorGood"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvIndustry" />

            <TextView
                android:id="@+id/tvSymbol"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="1dp"
                fromHtml="@{item.makeWatchlistTitleString()}"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@id/ivAlarm"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="tvIsPriceGood, tvSymbol" />

            <com.atittoapps.otchelper.common.ChartView
                android:id="@+id/chart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                historicalData="@{item.historicalData}"
                android:minHeight="56dp"
                app:layout_constraintTop_toBottomOf="@id/valuesContainer"
                android:layout_marginTop="2dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <data>

        <variable
            name="item"
            type="com.atittoapps.domain.companies.model.DomainStock" />
    </data>

</layout>